Use Integer/Long/Double.valueOf rather than the boxing constructors
SpotBugs treats DM_NUMBER_CTOR and DM_FP_NUMBER_CTOR as build-breaking, and
valueOf caches small values rather than allocating. Five sites across the
wearable API plus the simulator bridge.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>